# AAri

./: .gitignore  CMakeLists.txt  README.md  build_setup.sh  create_git_archive.sh  meson.build  requirements.txt  setup.bat  setup.sh
.clion_run_configs/: Build.run.xml  Meson release.run.xml  Python tests for test_python_bindings.TestAAriPythonBindings.run.xml  Python tests for tests.python.test_bindings.TestAAriPythonBindings.run.xml  Run meson tests.run.xml  meson release build.run.xml  release.run.xml
.github/workflows/: ci.yml
AAri/: audio_engine.py  block.py  mixers.py  oscillators.py
bindings/: python_bindings.cpp
python/: AAri_python_wrapper.py
python/AAri/: audio_engine.py  mixers.py  oscillators.py
src/: main.cpp
src/blocks/: envelopes.cpp  envelopes.h  mixers.cpp  mixers.h  oscillators.cpp  oscillators.h
src/core/: audio_context.h  audio_engine.cpp  audio_engine.h  block.cpp  block.h  block_deprecated.cpp  block_deprecated.h  blocks.h  graph.cpp  graph.h  graph_deprecated.cpp  graph_deprecated.h  graph_io.h  graph_registry.h  inputs_outputs.cpp  inputs_outputs.h  parameters.cpp  parameters.h  wire.cpp  wire.h  wire_deprecated.cpp  wire_deprecated.h  wires.cpp  wires.h
src/core/utils/: FieldMap.cpp  FieldMap.h  assert.h  data_structures.h
tests/cpp/: flecs_tests.cpp  graph_tests.cpp  graph_tests2.cpp  utils_tests.cpp
tests/python/: test_basic_engine.py  test_bindings.py  test_graph.py  test_python_bindings.py
